[FIX] Wrap BookmarkList component in Link to Router

--- a/frostmark/core/gui/react/src/Sidebar.css
+++ b/frostmark/core/gui/react/src/Sidebar.css
@@ -1,4 +1,4 @@
-.Sidebar {
+.sidebar {
     float: left;
     display: block;
     width: 25vw;
